# pacman-repo-builder.new

./: Cargo.toml  LICENSE.md  PLAN.md  check-all.bash  justfile
.github/: FUNDING.yml
.github/workflows/: test.yaml
cli/: build_pacman_repo.rs
src/: app.rs  config.rs  file_base_name.rs  lib.rs  manifest.rs  pkgbuild_desc.rs  pkgbuild_group.rs  pkgbuild_name.rs  repo_name.rs  template.rs
src/app/: new.rs  run.rs
src/config/: file_base_name.rs  pkgbuild_desc.rs  pkgbuild_group.rs
src/config/pkgbuild_group/: git.rs  local.rs
src/pkgbuild_group/: git.rs  local.rs
src/template/: params.rs  parse.rs
